<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_input_layout"
        style="@style/ChainOutlinedBox"
        android:hint="@string/login_text_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/ChainOutlinedBox"
        android:hint="@string/password_text_input_layout_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/login_text_input_layout"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        android:layout_marginTop="@dimen/sign_in_button_margin_top"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@integer/login_root_width_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@id/forgot_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@integer/login_root_width_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_button_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@integer/login_root_width_percent" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_button"
        android:visibility="gone"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/state_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="@integer/login_root_width_percent"
        android:layout_marginBottom="@dimen/error_text_view_margin_bottom"
        android:textAlignment="center"
        android:textSize="@dimen/state_text_view_text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>